--- a/Prac 8 /squaring.kv
+++ b/Prac 8 /squaring.kv
@@ -10,7 +10,7 @@ BoxLayout:
         Button:
             text: 'Square'
             # the following line specifies the function in the app class to call when the button is pressed
-            on_press: app.handle_calculate(int(input_number.text))
+            on_press: app.handle_calculate(input_number.text)
         Label:
             id: output_label
             font_size: 48
@@ -18,4 +18,4 @@ BoxLayout:
 
     Label:
         id: instruction
-        text: 'Enter a number and press "Square'
+        text: 'Enter a number and press "Square"'
